--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Transparent Header and Navbar inside Carousel</title>
+    <title>R & S INTERNATIONAL | Home</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -70,7 +70,7 @@
                 <div class="container">
                     <div class="logo">
                         <img src="Images/R & S logo.png" alt="">
-                        <a class="navbar-brand" href="#">R & S <br> INTERNATIONAL</a>
+                        <a class="navbar-brand" href="index.html">R & S <br> INTERNATIONAL</a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
