--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <img src="Images/1.png" class="d-block w-100" alt="Image 1">
             </div>
             <div class="carousel-item">
-                <img src="Images/2.png" class="d-block w-100" alt="Image 2">
+                <img src="Images/4.jpg" class="d-block w-100" alt="Image 2">
             </div>
             <div class="carousel-item">
                 <img src="Images/3.png" class="d-block w-100" alt="Image 3">
