--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>R & S INTERNATIONAL | Home</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <!-- Font-Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/Navbar.css">
@@ -84,7 +85,7 @@
                                 <a class="nav-link" href="about.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
+                                <!-- <a class="nav-link" href="#">Contact Us</a> -->
                             </li>
                         </ul>
                     </div>
@@ -127,9 +128,9 @@
             <div class="col-md-3">
               <h4>Quick Links</h4>
               <ul class="list-unstyled">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <!-- <li><a href="#">Contact</a></li> -->
               </ul>
             </div>
             <div class="col-md-3">
