--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                                 <a class="nav-link" href="about.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <!-- <a class="nav-link" href="#">Contact Us</a> -->
+                                <a class="nav-link" href="contact.html">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -245,7 +245,7 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <!-- <li><a href="#">Contact</a></li> -->
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
