update map and others

--- a/contact.html
+++ b/contact.html
@@ -82,13 +82,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="index.html">HOME</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">About Us</a>
+                                <a class="nav-link" href="about.html">ABOUT US</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact Us</a>
+                                <a class="nav-link" href="contact.html">CONTACT US</a>
                             </li>
                         </ul>
                     </div>
@@ -106,8 +106,8 @@
                     <div class="card">
                         <i class="fa-solid fa-phone"></i>
                         <h4>Mobile</h4>
-                        <p>Tel/Fax: ++94 1129 17 587</p>
-                        <p>Mobile: ++94 7166 76 973</p>
+                        <p>Tel/Fax: +94 1129 17 587</p>
+                        <p>Mobile: +94 7166 76 973</p>
                     </div>
                 </div>
                 <div class="col-md-4 align-items-center">
@@ -123,11 +123,14 @@
                     <div class="card">
                         <i class="fa-solid fa-envelope fa-beat"></i>
                         <h4>Email</h4>
-                        <p>anura927@gmail.com</p>
+                        <a style="text-decoration: none; color: #111;" href="anura927@gmail.com"><p>anura927@gmail.com</p></a>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3960.3019175949753!2d79.9180608!3d6.9736619!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae257f7f4c84d91%3A0x181e942d6efe7c2d!2sGakuin!5e0!3m2!1sen!2slk!4v1685894825316!5m2!1sen!2slk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <!-- Footer -->
@@ -156,10 +159,10 @@
                                 <br> Dalugama, Kelaniya,
                                 <br> Sri Lanka.</a></li>
                         <li class="pb-2"><i class="fa-regular fa-envelope"></i>&nbsp;&nbsp;<a
-                                href="">anura927@gmail.com</a></li>
-                        <li class="pb-2"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;<a href="">Tel/Fax: ++94
+                                href="anura927@gmail.com">anura927@gmail.com</a></li>
+                        <li class="pb-2"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;<a href="">Tel/Fax: +94
                                 1129 17 587 <br>
-                                Mobile: ++94 7166 76 973</a></li>
+                                Mobile: +94 7166 76 973</a></li>
                     </ul>
                 </div>
             </div>
