--- a/about.html
+++ b/about.html
@@ -12,9 +12,19 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Navbar.css">
     <link rel="stylesheet" href="css/Footer.css">
+    <script>
+        window.onload = function() {
+            var preloader = document.getElementById('preloader');
+            preloader.style.display = 'none';
+          };
+          
+    </script>
 </head>
 
 <body>
+    <div id="preloader">
+        <div id="loader"></div>
+      </div>
     <!-- Carousel -->
     <div class="bg-image">
 
