--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                         <div class="d-flex">
                             <ul class="navbar-nav social">
                                 <li>
-                                    <a class="nav-link" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                                    <a class="nav-link" href="https://www.facebook.com/profile.php?id=100065041237403"><i class="fa-brands fa-square-facebook"></i></a>
                                 </li>
                                 <li>
                                     <a class="nav-link" href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -111,8 +111,17 @@
             </nav>
         </div>
 
+        
 
         <img src="Images/1.png" alt="">
+
+        <div style="text-align: center;
+        position: relative;
+        top: -160px;
+        color: white;">
+            <h3>ABOUT US</h3>
+            <h5>HOME | ABOUT US</h5>
+        </div>
     </div>
     <section>
         <div class="container">
