--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                         <div class="d-flex">
                             <ul class="navbar-nav social">
                                 <li>
-                                    <a class="nav-link" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                                    <a class="nav-link" href="https://www.facebook.com/profile.php?id=100065041237403"><i class="fa-brands fa-square-facebook"></i></a>
                                 </li>
                                 <li>
                                     <a class="nav-link" href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -117,6 +117,13 @@
 
 
         <img src="Images/1.png" alt="">
+        <div style="text-align: center;
+        position: relative;
+        top: -160px;
+        color: white;">
+            <h3>Contact US</h3>
+            <h5>HOME | Contact US</h5>
+        </div>
     </div>
     <section class="contact-1">
         <div class="container">
