--- a/index.html
+++ b/index.html
@@ -182,37 +182,35 @@
                     <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
                     <div class="cover">
                         <div class="scroll-images">
-                            <div class="child"><img class="child-img" src="Images/gallery/img (10).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (1).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (2).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (2).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (3).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (3).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (4).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (4).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (5).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (5).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (6).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (6).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (1).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (7).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (7).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (8).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (8).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (9).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (9).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (10).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (10).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (11).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (11).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (12).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (12).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (13).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (13).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (14).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (14).jpg" alt="image">
-                            </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (15).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (15).JPG" alt="image">
                             </div>
                         </div>
                     </div>
