change image name

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="scroll-images">
                             <div class="child"><img class="child-img" src="Images/gallery/img (1).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (2).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (2).jpg" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img (3).JPG" alt="image">
                             </div>
@@ -192,15 +192,15 @@
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img (5).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (6).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (6).jpg" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img (7).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (8).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (8).jpg" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (9).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (9).jpg" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (10).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (10).jpg" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img (11).JPG" alt="image">
                             </div>
@@ -208,9 +208,9 @@
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img (13).JPG" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (14).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (14).jpg" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (15).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img (15).jpg" alt="image">
                             </div>
                         </div>
                     </div>
