--- a/index.html
+++ b/index.html
@@ -182,35 +182,35 @@
                     <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
                     <div class="cover">
                         <div class="scroll-images">
-                            <div class="child"><img class="child-img" src="Images/gallery/img (1).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(1).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (2).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(2).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (3).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(3).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (4).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(4).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (5).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(5).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (6).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(6).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (7).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(7).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (8).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(8).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (9).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(9).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (10).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(10).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (11).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(11).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (12).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(12).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (13).JPG" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(13).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (14).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(14).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img (15).jpg" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(15).png" alt="image">
                             </div>
                         </div>
                     </div>
