--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
 
         
 
-        <img src="Images/1.png" alt="">
+        <img style="filter:brightness(0.5);" src="Images/gallery/img(13).png" alt="">
 
         <div style="text-align: center;
         position: relative;
