--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         </div>
 
 
-        <img src="Images/1.png" alt="">
+        <img style="filter:brightness(0.5);" src="Images/gallery/img(13).png" alt="">
         <div style="text-align: center;
         position: relative;
         top: -160px;
