--- a/index.html
+++ b/index.html
@@ -176,25 +176,13 @@
 
     <section class="h-3" style="background-color: black; text-align: center;">
         <div class="container-fluid">
-            <h2 style="position: relative; top: 50px; color: white;">"A Decade of Milestones: A Journey to Success"</h2>
+            <h1 style="position: relative; top: 50px; color: white; background-color: gray;">"A Decade of Milestones: A Journey to Success"</h1>
             <div class="content">
                 <div class="main-scroll-div">
                     <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
                     <div class="cover">
                         <div class="scroll-images">
-                            <div class="child"><img class="child-img" src="Images/gallery/img(15).png" alt="image">
-                            </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(2).png" alt="image">
-                            </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(3).png" alt="image">
-                            </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(4).png" alt="image">
-                            </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img(5).png" alt="image">
-                            </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(6).png" alt="image">
-                            </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(7).png" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img(8).png" alt="image">
                             </div>
@@ -202,9 +190,49 @@
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img(10).png" alt="image">
                             </div>
+                        </div>
+                    </div>
+                    <div><button class="icon" onclick="scrollr()"><i class="fa-solid fa-forward"></i></button></div>
+                </div>
+            </div>
+            <h2 style="    position: relative;
+            color: white;
+            top: -50px;">~ We give better knowledge for our Students ~ </h2>
+            <hr style="color: white;">
+            <div class="content">
+                <div class="main-scroll-div">
+                    <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
+                    <div class="cover">
+                        <div class="scroll-images">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(2).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/img(7).png" alt="image">
+                            </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img(11).png" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img(12).png" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div><button class="icon" onclick="scrollr()"><i class="fa-solid fa-forward"></i></button></div>
+                </div>
+            </div>
+            <h2 style="    position: relative;
+            color: white;
+            top: -50px;">~ Japanese Schools Conducting Interviews ~ </h2>
+            <hr style="color: white;">
+            <div class="content">
+                <div class="main-scroll-div">
+                    <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
+                    <div class="cover">
+                        <div class="scroll-images">
+                            <div class="child"><img class="child-img" src="Images/gallery/img(15).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/img(3).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/img(4).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/img(6).png" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/img(13).png" alt="image">
                             </div>
@@ -217,6 +245,10 @@
                     <div><button class="icon" onclick="scrollr()"><i class="fa-solid fa-forward"></i></button></div>
                 </div>
             </div>
+            <h2 style="    position: relative;
+            color: white;
+            top: -50px;">~ Our Students who succeed in Japan ~</h2>
+
         </div>
     </section>
 
