--- a/index.html
+++ b/index.html
@@ -182,15 +182,25 @@
                     <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
                     <div class="cover">
                         <div class="scroll-images">
-                            <div class="child"><img class="child-img" src="Images/gallery/img(5).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (1).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(4).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (2).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(8).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (3).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(9).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (4).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(10).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (5).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (6).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (7).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (8).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (9).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (10).png" alt="image">
                             </div>
                         </div>
                     </div>
@@ -206,13 +216,17 @@
                     <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
                     <div class="cover">
                         <div class="scroll-images">
-                            <div class="child"><img class="child-img" src="Images/gallery/img(2).png" alt="image">
-                            </div> 
-                            <div class="child"><img class="child-img" src="Images/gallery/img(7).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/interviews/img (1).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(11).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/interviews/img (2).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(12).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/interviews/img (3).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/interviews/img (4).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/interviews/img (5).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/interviews/img (6).png" alt="image">
                             </div>
                         </div>
                     </div>
@@ -228,17 +242,22 @@
                     <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
                     <div class="cover">
                         <div class="scroll-images">
-                            <div class="child"><img class="child-img" src="Images/gallery/img(15).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (1).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(3).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (2).png" alt="image">
                             </div>
-                           <div class="child"><img class="child-img" src="Images/gallery/img(6).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (3).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(13).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (4).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(14).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (5).png" alt="image">
                             </div>
-                            <div class="child"><img class="child-img" src="Images/gallery/img(1).png" alt="image">
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (6).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (7).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (8).png" alt="image">
+                            </div>
                             </div>
                         </div>
                     </div>
