--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/succeed/img (8).png" alt="image">
                             </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (9).png" alt="image">
+                            </div>
                             </div>
                         </div>
                     </div>
