--- a/index.html
+++ b/index.html
@@ -235,7 +235,27 @@
             </div>
             <h2 style="    position: relative;
             color: white;
-            top: -50px;">~ Japanese Schools Conducting Interviews ~ </h2>
+            top: -50px;">~ We give better knowledge for our Students ~ </h2>
+            <hr style="color: white;">
+            <div class="content">
+                <div class="main-scroll-div">
+                    <div><button class="icon" onclick="scrolll()"><i class="fa-solid fa-backward"></i></button></div>
+                    <div class="cover">
+                        <div class="scroll-images">
+                            <div class="child"><img class="child-img" src="Images/pic 1.jpg" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/pic 2.jpg" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/pic 3.png" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div><button class="icon" onclick="scrollr()"><i class="fa-solid fa-forward"></i></button></div>
+                </div>
+            </div>
+            <h2 style="    position: relative;
+            color: white;
+            top: -50px;">~ Visiting of vocational College ~ </h2>
             <hr style="color: white;">
             <div class="content">
                 <div class="main-scroll-div">
@@ -269,7 +289,7 @@
             <h2 style="    position: relative;
             color: white;
             top: -50px;">~ Our Students who succeed in Japan ~</h2>
-
+            <video class="video" controls src="Images/video.mp4"></video>
         </div>
     </section>
 
