--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (10).png" alt="image">
                             </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/knowledge/img (11).png" alt="image">
+                            </div>
                         </div>
                     </div>
                     <div><button class="icon" onclick="scrollr()"><i class="fa-solid fa-forward"></i></button></div>
@@ -279,6 +281,8 @@
                             <div class="child"><img class="child-img" src="Images/gallery/succeed/img (8).png" alt="image">
                             </div>
                             <div class="child"><img class="child-img" src="Images/gallery/succeed/img (9).png" alt="image">
+                            </div>
+                            <div class="child"><img class="child-img" src="Images/gallery/succeed/img (10).png" alt="image">
                             </div>
                             </div>
                         </div>
